# Progress_project

./: .env.example  .gitignore  AGENTS.md  API.md  ARCHITECTURE.md  CHANGELOG.md  CODING_STANDARD.md  CONTRIBUTING.md  DATABASE.md  DECISIONS.md  DEPLOYMENT.md  DOMAIN_MODEL.md  README.md  SECURITY.md  SYSTEM_MAP.md  TESTING.md  TODO.md  docker-compose.yml  prd.md  updateMinikube.md
.github/workflows/: branch-ci.yml  (+5 more)
assets/: README.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: projects.py  sync.py
backend/app/core/: config.py
backend/app/db/: lifecycle.py  schema.py  session.py
backend/app/modules/github/: client.py
backend/app/modules/progress/: calculator.py
backend/app/modules/projects/: repository.py  schema.py
backend/app/modules/sync/: log_repository.py  schema.py  service.py
backend/app/parsers/: prd_parser.py  types.py
backend/app/tests/: test_github_client.py  test_prd_parser.py  test_progress_calculator.py  test_project_repository.py  test_sync_service.py
configs/: README.md
docker/: README.md
docs/: architecture.md  github-actions-setup.md  prd-format.md
examples/: github-action.yml  tracked-project-prd-template.md
frontend/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json
k8s/: README.md  hello-world-ingress.yaml  progress-tracker.yaml
migrations/: README.md
scripts/: README.md  cleanup-minikube-server.sh  deploy-minikube.sh  install-github-runner.sh  install-ingress-https-service.sh
src/: README.md
tests/: README.md
tools/: README.md
(+63 files in other folders)
